--- a/assets/css/nav-bar.css
+++ b/assets/css/nav-bar.css
@@ -9,18 +9,19 @@ nav {
   display: flex;
   height: 80px;
   width: 100%;
-  background-color: #01282e;
+  background: linear-gradient(to left, #0008ff 0%, #8300b3 100%);
   align-items: center;
   justify-content: space-between;
   padding: 0 50px 0 100px;
   flex-wrap: wrap;
   position: fixed;
+  z-index: 1;
 }
-nav .logo {
-  color: white;
-  font-size: 35px;
-  font-weight: 600;
+
+.logo img {
+  width: 5.4em;
 }
+
 nav ul {
   display: flex;
   flex-wrap: wrap;
@@ -43,7 +44,8 @@ nav ul li a {
 }
 nav ul li a.active,
 nav ul li a:hover {
-  background: #f88f06;
+  background: linear-gradient(to left, #0008ff 0%, #8300b3 100%);
+  color: white;
 }
 
 nav .menu-btn i {
@@ -51,6 +53,7 @@ nav .menu-btn i {
   cursor: pointer;
   display: none;
 }
+
 @media (max-width: 920px) {
   nav .menu-btn i {
     display: block;
@@ -59,7 +62,7 @@ nav .menu-btn i {
     position: fixed;
     top: 80px;
     left: -100%;
-    background-color: #003840;
+    background: linear-gradient(to left, #0008ff 0%, #8300b3 100%);
     height: 100vh;
     width: 100%;
     text-align: center;
@@ -79,6 +82,6 @@ nav .menu-btn i {
   nav ul li a.active,
   nav ul li a:hover {
     background: none;
-    color: #f88f06;
+    background: linear-gradient(to bottom right, #3366ff 0%, #ff0000 100%);
   }
 }
