--- a/assets/css/nav-bar.css
+++ b/assets/css/nav-bar.css
@@ -82,6 +82,6 @@ nav .menu-btn i {
   nav ul li a.active,
   nav ul li a:hover {
     background: none;
-    background: linear-gradient(to bottom right, #3366ff 0%, #ff0000 100%);
+    background: linear-gradient(to right, #3366ff 0%, #8300b3 100%);
   }
 }
